[package]
name = "es_rule_checker"
version = "1.4.7"
edition = "2024"

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
sled = "0.34"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
chrono = "0.4"
futures = "0.3.31"
